<resources>
    <string name="app_name">RestAPI Weather App</string>
    <string name="open">Open Navigation Drawer</string>
    <string name="close">Close Navigation Drawer</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>

    <string name="sign_up_here">No account? Sign Up</string>


    <string name="name">Name</string>
    <string name="user_name">User name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="mobile">Mobile#</string>

    <string name="update">Update</string>
    <string name="upload">Upload</string>
    <string name="capture">Capture</string>

    <string name="weather_forecast">Get Weather Forecast</string>
    <string name="celcius">°C</string>

    <string name="current_temp">Current Temp</string>
    <string name="min_temp">Min Temp</string>
    <string name="max_temp">Max Temp</string>

    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="wind">Wind</string>
    <string name="pressure">pressure</string>
    <string name="humidity">Humidity</string>
    <string name="error_msg">Something went wrong</string>
    <string name="location">Location</string>
    <string name="refresh">Refresh</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current_location">Current Location</string>
    <string name="specify_location">Specify Location</string>
</resources>