<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.UserProfileFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlack">

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:padding="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBlack"
            android:layout_gravity="center">
            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:id="@+id/profile_image"
                android:background="@color/colorWhite"
                android:src="@drawable/ic_profile_image"
                android:visibility="invisible"/>
            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:layout_marginTop="15dp"
                android:textColor="@color/colorWhite"
                app:backgroundTint="@color/netflix_red"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:text="@string/capture"
                android:padding="10dp"
                android:id="@+id/capture"/>
            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/colorWhite"
                app:backgroundTint="@color/netflix_red"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:text="@string/upload"
                android:padding="10dp"
                android:id="@+id/upload"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextColor="@color/netflix_grey"
                app:boxStrokeErrorColor="@color/netflix_red"
                app:boxStrokeColor="@color/netflix_grey"
                android:paddingBottom="10dp"
                android:hint="@string/user_name"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/colorWhite"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextColor="@color/netflix_grey"
                app:boxStrokeErrorColor="@color/netflix_red"
                app:boxStrokeColor="@color/netflix_grey"
                android:paddingBottom="10dp"
                android:hint="@string/name"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/colorWhite"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextColor="@color/netflix_grey"
                app:boxStrokeErrorColor="@color/netflix_red"
                app:boxStrokeColor="@color/netflix_grey"
                android:paddingBottom="10dp"
                android:hint="@string/mobile"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/colorWhite"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextColor="@color/netflix_grey"
                app:boxStrokeErrorColor="@color/netflix_red"
                app:boxStrokeColor="@color/netflix_grey"
                android:paddingBottom="10dp"
                android:hint="@string/email"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/colorWhite"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:layout_marginTop="15dp"
                android:textColor="@color/colorWhite"
                app:backgroundTint="@color/netflix_red"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:text="@string/update"
                android:padding="10dp"
                android:id="@+id/update"/>

        </LinearLayout>

    </ScrollView>
</FrameLayout>